--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,19 @@
+aniso8601==3.0.2
+astroid==2.0.4
+click==6.7
 configparser==3.5.0
+Flask==1.0.2
+Flask-RESTful==0.3.6
+isort==4.3.4
+itsdangerous==0.24
+Jinja2==2.10
+lazy-object-proxy==1.3.1
+MarkupSafe==1.0
+mccabe==0.6.1
 psycopg2-binary==2.7.5
+pylint==2.1.1
+pytz==2018.5
+six==1.11.0
+typed-ast==1.1.0
+Werkzeug==0.14.1
+wrapt==1.10.11
