--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ configparser==3.5.0
 cryptography==2.3.1
 Flask==1.0.2
 Flask-Cors==3.0.6
-Flask-RESTful==0.3.6
 idna==2.7
 isort==4.3.4
 itsdangerous==0.24
@@ -15,6 +14,7 @@ Jinja2==2.10
 lazy-object-proxy==1.3.1
 MarkupSafe==1.0
 mccabe==0.6.1
+Pillow==5.2.0
 psycopg2-binary==2.7.5
 pycparser==2.18
 pylint==2.1.1
